# Embedded-Factory-Automated-Light-and-Door

FreeRTOS_Blink/: CMakeLists.txt
FreeRTOS_Blink/src/: buzzer.c  buzzer.h  infrared_sensor.c  infrared_sensor.h  ldr_sensor.c  ldr_sensor.h  led.c  led.h  main.c  servo.c  servo.h  ultrasonic_sensor.c  ultrasonic_sensor.h
